fix overflow selected value in Select (#3481)

--- a/components/select/style/index.less
+++ b/components/select/style/index.less
@@ -154,6 +154,8 @@
       content: '.';
       visibility: hidden;
       pointer-events: none;
+      display: inline-block;
+      width: 0;
     }
   }
 
